Building out DB schema & api -- working Web Api project now.

--- a/trackapi/TrackApi/appsettings.json
+++ b/trackapi/TrackApi/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=dlambertw530;Database=TrackDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
